--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,9 +29,9 @@ footer {
 }
 .copyright-social-payment {
   /* position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%; */
+  bottom: 0;
+  left: 0;
+  width: 100%; */
 }
 .copyright-social-payment a {
   text-decoration: none;
@@ -114,22 +114,27 @@ footer ul {
   margin-bottom: 10px;
   border-bottom: 1px solid grey;
 }
+
 .row-img {
   width: 80%;
 }
 
 /*-----checkout-------*/
 .personal-info {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(2, 50%);
   border-bottom: 1px solid black;
   padding: 1rem;
 }
-.shipping-info {
-  display: grid;
-  grid-template-rows: repeat(2);
-  grid-template-columns: repeat(2, 50%);
+#shipping-info {
+  display: flex;
+  flex-direction: column;
+  height: 13rem;
+  justify-content: space-around;
   padding: 1rem;
+  /* grid-template-columns: repeat(2, 50%);
+  grid-template-rows: repeat(2, 50%);
+  padding: 1rem; */
 }
 .checkout-form {
   position: relative;
@@ -147,12 +152,18 @@ footer ul {
   visibility: hidden;
 }
 /* .paypal-buttons {
-    transition: 0.5s linear all;
-  }
-  .paypal-buttons.hidden {
-    visibility: hidden;
-  } */
-
+  transition: 0.5s linear all;
+}
+.paypal-buttons.hidden {
+  visibility: hidden;
+} */
+.checkout-total-container h5 {
+  display: inline;
+}
+.checkout-total-container {
+  display: flex;
+  justify-content: space-between;
+}
 /*-----media queries-----*/
 @media screen and (max-width: 439px) {
   .new-item {
