--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
 <div class="row pt-5">
-    <div class="col-md-6">
+    <div class="col-md-6 pb-5">
         <div class="checkout-form" >
-            <div class="card p-3" id='form-wrapper'>
+            <div class="card p-3 mb-5" id='form-wrapper'>
                 <form id='form' action="">
                     <div class="personal-info" id='user-info'>
                         <input type="text" name="name" placeholder="Name..." class="w-75">
@@ -18,28 +18,31 @@
                     </div>
                     <input id="enter-shipping-info" class="btn btn-outline-success w-100" value="Continue" type="submit">
                 </form>
-                </div>
-                <div class="card p-3 hidden" id="payment-options">
+                <div class="mt-5" id="payment-options">
                     <h5>Payment Options
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card-2-front" viewBox="0 0 16 16">
                             <path d="M14 3a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h12zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
                             <path d="M2 5.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5z"/>
                         </svg>
                     </h5>
-                    <div class="paypal-buttons hidden" id="paypal-button-container"></div>
+                    <div class="paypal-buttons" id="paypal-button-container"></div>
                 </div>
-            </div>
+        </div>
+                
+    </div>
 
     </div>
-    <div class="col-md-6">
-        <div class="card">
+    <div class="col-md-6 pb-5">
+        <div class="card mb-5">
             <div class="card-body">
-                <div class="top-order-summary">
+                <div class="top-order-summary mb-5">
                     <a href="{% url 'cart' %}" class="btn btn-outline-dark">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"/>
                         </svg>
-                        Back to Cart</a>
+                        Back to Cart
+                    </a>
+                    <hr>
                 </div>
                 {% for item in items %}
                 <div class="cart-row">
@@ -51,13 +54,12 @@
                     </div>
                 </div>
                 {% endfor %}
-                <div class="checkout-total-container">
+                <div class="checkout-total-container mt-4">
                     <h5>Items: {{ order.get_cart_items }}</h5>
                     <h5>Total: ${{ order.get_cart_total|floatformat:2 }}</h5>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 
@@ -65,7 +67,8 @@
 
 <script type='text/javascript'>
     let shipping = '{{order.shipping}}'
-    
+    const shippingInfoCard = document.querySelector('#form-wrapper') 
+    const payPalBtns = document.querySelector('#payment-options')
     if (shipping == 'False'){
         document.getElementById('shipping-info').innerHTML = '';
     }
@@ -83,11 +86,14 @@
 
     const form = document.getElementById('form');
 
+    window.addEventListener('DOMContentLoaded',()=>{
+        payPalBtns.style.zIndex=-1
+    })
     form.addEventListener('submit',function(e){
         e.preventDefault();
         console.log('FormSubmitted...');
-        document.getElementById('enter-shipping-info').classList.add('hidden');
-        document.getElementById('payment-options').classList.remove('hidden');
+        document.getElementById('enter-shipping-info').classList.add('hidden')
+        payPalBtns.style.zIndex=0
     })
 
     //document.getElementById('make-payment').addEventListener('click',(e)=>{
