--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -52,9 +52,9 @@
     <title>E-Commerce</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light site-navbar">
+    <nav class="navbar navbar-expand-lg navbar-light site-navbar sticky-top">
       <div class="container-fluid navbar-stuff">
-        <a class="navbar-brand company-brand" href="{% url 'home' %}">E-commerce</a>
+        <a class="navbar-brand company-brand" href="{% url 'home' %}">The Broken Fox</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
