--- a/store/templates/store/shipping.html
+++ b/store/templates/store/shipping.html
@@ -2,21 +2,18 @@
 {% load static %}
 {% block content %}
     <h1 class="mt-5 pt-5">Shipping</h1>
-    <p>
-        BlueCrate.com works with manufacturers and artisans across the world to source the coolest products at the prices that suit you. 
-
-    </p>
-    <p>
-        This results in all our orders being shipped to you from across the world - from Thailand and China to Morocco. However we do ensure we can track our orders for your extra piece of mind.
-
-    </p>
-    <p>
-        Yet because your products are coming from so far away they often take 2-3 weeks to arrive. So no worrying if the product doesn't arrive the next day! Most of the time our product will arrive a lot quicker, but we want you to be aware this is out of our control!
-
-    </p>
-    <p class="mb-5 pb-5">
-        This does mean we ship worldwide, so you can shop with us wherever you are.
-
-    </p>
-
+    <div class="p-5">
+        <p>
+            TheBrokenFox.com works with manufacturers across the world to source high quality products at the prices that suit you. 
+        </p>
+        <p>
+        This results in all our orders being shipped to you from across the world. However we do ensure we can track our orders for your extra piece of mind.
+        </p>
+        <p>
+        Because your products are coming from so far away they can take 2-3 weeks to arrive. Don't worry if the product doesn't arrive the next day! Most of the time our product will arrive a lot quicker, but we want you to be aware this is out of our control.
+        </p>
+        <p>
+        If you have any questions, contact us and our team will be happy to answer!
+        </p>
+    </div>
 {% endblock content %}
