--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type='text/css' href="{% static 'css/style.css' %}">
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
     <script type="text/javascript">
       let user = '{{request.user}}'
 
@@ -49,7 +50,7 @@
         document.cookie = 'cart=' + JSON.stringify(cart) + ";domain=;path=/"
       }
     </script>
-    <title>E-Commerce</title>
+    <title>The Broken Fox</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light site-navbar sticky-top">
@@ -60,14 +61,28 @@
         </button>
         <div class="collapse navbar-collapse product-options" id="navbarNav">
           <ul class="navbar-nav product-types-list">
-            <li class="nav-item">
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'store' %}">Products</a>
-            </li>
             <!-- <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                  Apparel
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li><a class="dropdown-item" href="#">Men's</a></li>
+                  <li><a class="dropdown-item" href="#">Women's</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </div>
             </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'all_products' %}">All Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'apparel' %}">Apparel</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'accessories' %}">Accessories</a>
+            </li>
+            
             <li class="nav-item d-flex justify-content-end pe-3">
               <a href="{% url 'cart' %}">
                 <div class="cart-area">
