--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -9,7 +9,7 @@
         <h5>
             Total: <strong>${{ order.get_cart_total|floatformat:2 }}</strong>
         </h5>
-        <a href="{% url 'store' %}" class="btn btn-outline-secondary">
+        <a href="{% url 'all_products' %}" class="btn btn-outline-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"/>
             </svg>
@@ -30,11 +30,11 @@
         <div class="cart-row">
             <div style="flex:2">
                 <a href="{% url 'detail_item' item.product.id %}">
-                    <img class='row-img' src="{% static 'images/store_placeholder.png' %}" alt="">
+                    <img class='row-img' src="{{item.product.imageURL}}" alt="">
                 </a>
             </div>
             <div style="flex:2">
-                <a href="{% url 'detail_item' item.product.id %}">
+                <a href="{% url 'detail_item' item.product.id %}" style="text-decoration: none; color: black;">
                     <strong>{{ item.product.name }}</strong>
                 </a>
             </div>
@@ -66,7 +66,7 @@
 </div>
 <div class="card my-5 p-3">
     <div class="card-body">
-        <a href="{% url 'store' %}" class="btn btn-outline-secondary">
+        <a href="{% url 'all_products' %}" class="btn btn-outline-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"/>
             </svg>
