--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -46,7 +46,7 @@
                 </div>
                 {% for item in items %}
                 <div class="cart-row">
-                    <div style="flex:2"><img class='row-img' src="{% static 'images/store_placeholder.png' %}" alt=""></div>
+                    <div style="flex:2"><img class='row-img' src="{{item.product.imageURL}}" alt=""></div>
                     <div style="flex:2">{{ item.product.name }}</div>
                     <div style="flex: 1;">{{ item.product.price|floatformat:2 }}</div>
                     <div style="flex: 1;">
@@ -140,7 +140,7 @@
             cart = {}
             document.cookie = 'cart=' +JSON.stringify(cart) + ";domain=;path=/"
 
-            window.location.href = "{% url 'store' %}"
+            window.location.href = "{% url 'all_products' %}"
         })
     }
     
