--- a/store/templates/store/detail_item.html
+++ b/store/templates/store/detail_item.html
@@ -2,113 +2,89 @@
 {% load static %}
 {% block content %}
     <div class="row pt-5">
-        <div class="col-md-7 py-5">
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <ol class="carousel-indicators">
-                  <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-                  <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-                  <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="{% static 'images/store_placeholder.png' %}" class="d-block w-100" alt="{% static 'images/store_placeholder.png' %}">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="{% static 'images/store_placeholder.png' %}" class="d-block w-100" alt="{% static 'images/store_placeholder.png' %}">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="{% static 'images/store_placeholder.png' %}" class="d-block w-100" alt="{% static 'images/store_placeholder.png' %}">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </a>
+      <div class="col-md-7 py-5">
+        {% if product.album.images %}
+          {% for image in product.album.images %}
+            <img src="{{image.image.url}}" class="d-block w-100" alt="">
+          {% endfor %}
+        {% endif %}
+      </div>
+      <div class="col-md-5">
+        <h1 class="mb-3">{{product.name}}</h1>
+        <p class="mb-3">${{product.price}}</p>
+        <button data-product='{{product.id}}' data-action="add" class="btn btn-outline-secondary update-cart add-btn mb-5">Add To Cart</button>
+          
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
+                Description
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <p>
+                  {{product.description}}
+                </p>
               </div>
-        </div>
-        <div class="col-md-5">
-            <h1 class="mb-3">{{product.name}}</h1>
-            <p class="mb-3">${{product.price}}</p>
-            <button data-product='{{product.id}}' data-action="add" class="btn btn-outline-secondary update-cart add-btn mb-5">Add To Cart</button>
-            <!-- <form action="">
-                <label for="cars">Choose a car:</label>
-                <select id="cars" name="cars">
-                  <option value="volvo">Volvo</option>
-                  <option value="saab">Saab</option>
-                  <option value="fiat">Fiat</option>
-                  <option value="audi">Audi</option>
-                </select>
-                <div class="choose-product-quantity">
-                    <button>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
-                            <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
-                        </svg>
-                    </button>
-                    <span class="product-quantity"></span>
-                    <button>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                        </svg>
-                    </button>
-                </div>
-            </form> -->
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
-                      Description
-                    </button>
-                  </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                      Details
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                      Shipping
-                    </button>
-                  </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
-                  </div>
-                </div>
+            </div>
+          </div>
+          {% if product.details %}
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                Details
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"> 
+                <p>
+                  {{product.details}}
+                </p>
               </div>
-        </div>
-    </div>
-    <div class="my-5">
-        <h1 class="text-center">Reviews</h1>
-        <div class="container-fluid py-5">
-          {% if reviews %}
-            {% for review in reviews %}
-            <div class="card my-3">
-              <div class="d-flex">
-                <h6>{{review.rating}}</h6>
-                <h6>{{review.buyer_name}}</h6>
+            </div>
+          </div>
+          {% endif %}
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                Shipping
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <p>
+                  TheBrokenFox.com works with manufacturers across the world to source high quality products at the prices that suit you. 
+                </p>
+                <p>
+                  This results in all our orders being shipped to you from across the world. However we do ensure we can track our orders for your extra piece of mind.
+                </p>
+                <p>
+                  Because your products are coming from so far away they can take 2-3 weeks to arrive. Don't worry if the product doesn't arrive the next day! Most of the time our product will arrive a lot quicker, but we want you to be aware this is out of our control.
+                </p>
+                <p>
+                  If you have any questions, contact us and our team will be happy to answer!
+                </p>
                 
               </div>
-              <p>{{review.body}}</p>
-              <span>{{ review.date_posted|date:'h:i F d, Y' }}</span>
             </div>
-            {% endfor %}
-          {% else %}
-          <h2>No Reviews Yet</h2>
-          {% endif %}
-          
+          </div>
         </div>
+      </div>
     </div>
+  {% if reviews %}
+  <div class="my-5">
+    <h1 class="text-center">Reviews</h1>
+    <div class="container-fluid py-5">
+    {% for review in reviews %}
+      <div class="card my-3">
+        <div class="d-flex">
+          <h6>{{review.rating}}</h6>
+          <h6>{{review.buyer_name}}</h6>
+        </div>
+        <p>{{review.body}}</p>
+        <span>{{ review.date_posted|date:'h:i F d, Y' }}</span>
+      </div>
+    {% endfor %}
+  {% endif %}
 {% endblock content %}
