--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,18 +1,18 @@
 {% extends 'store/base.html' %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block content %}
-<div class="pb-5 mb-5">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div class="pb-5 mb-5 carousel-container">
+    <div id="carouselExampleControls" class="carousel slide mx-auto" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="{% static 'images/store_placeholder.png' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'images/Red_Hoodie_Front.PNG' %}" class="d-block carousel-image" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'images/store_placeholder.png' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'images/Blue_Crew_neck.PNG' %}" class="d-block carousel-image" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'images/store_placeholder.png' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'images/Black_Crew_Neck.PNG' %}" class="d-block carousel-image" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
@@ -35,7 +35,7 @@
         {% for product in products %}
         <a class="mx-2 mb-3 new-item" href="{% url 'detail_item' product.id %}">
           <div class="card">
-              <img src="{{product.image.url}}" alt="" class="card-img">
+              <img src="{{product.album.images.0.image.url}}" alt="" class="card-img">
               <div class="card-body"></div>
               {{product.name}}
           </div>
@@ -44,28 +44,16 @@
     </div>
 </div>
 <div class="news-letter p-5 my-5">
-    <form >
-        <div class="mx-auto mb-5 text-center text-dark">
-            <h1>Sign Up for our news letter</h1>
-            <h4>Get coupon codes and information on our latest releases...</h4>
-        </div>
-        <div class="news-letter-form mx-auto">
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Name</label>
-                <input type="text" class="form-control" id="exampleInputPassword1">
-                </div>
-            <div class="mb-3">
-                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                
-            </div>
-            
-            
-            <button type="submit" class="btn btn-primary">Submit</button>
-            
-        </div>
-    </form>
-
+  <form action='/' method='post'>
+    <div class="mx-auto mb-5 text-center text-dark">
+      <h1>Sign Up for our news letter</h1>
+      <h4>Get coupon codes and information on our latest releases...</h4>
+    </div>
+    <div class="email-form-fields mx-auto">
+      {% csrf_token %}
+      {{form|crispy}}
+      <button type="submit" class="btn btn-primary mt-3">Submit</button>
+    </div>
+  </form>
 </div>
 {% endblock content %}
