--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -5,7 +5,7 @@
     {% for product in products %}
     <div class="col-lg-4">
         <div class="card store-product-card mb-5">
-            <img src="{%  static 'images/store_placeholder.png' %}" alt="" class="card-img">
+            <img src="{{product.image.url}}" alt="" class="card-img">
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-end">
                     <h6><strong>{{ product.name }}</strong></h6>
